CHANGES:

09/18/2013:
- add some functions to MWAWGraphicListener: to make it more similar to
  MWAWContentListener
- GreatWorks parser: add pattern+gradient, begin to generate pictures
  which regroup many shapes, remain some problem with z-index

09/15/2013:
- make MWAWPictBasic disappear

09/13/2013:
- add MWAWGraphicListener: a listener to create complex picture; first try, must be improved...
- add MWAWGraphicInterface: an internal graphic interface a la libwpg-0.3.0 ( which contains
  functions to output in libwpg-0.2.0 format )
- begin to remove the calls to the previous classes in MWAWPictBasic...

09/11/2013:
- add a class MWAWGraphicShape to define basic shapes,
- begin to remove call to MWAWPictBasic to prepare the creation of a MWAWGraphicListener
- check that Acta, BeagleWorks/WordPerfect Work, LightWay Text, MacDoc, MacWrite,
  Mariner Write, Nisus Writer, WriterPlus, Z-Write use the new properties' classes

09/07/2013:
- More Parser: recognize basic picture in the main data text
- check that DOCMaker, eDoc, More, MindWrite, SimpleText, Tex-Edit, WriteNow
   use the new properties' classes,

09/06/2013:
- refactor the graphic generation: add classes to define complex graphic
  styles and modify the basic shapes, text box and group classes to create
  more complex pictures. 
  This will probably imply to introduce a GraphicListener in some near future,
  but not now...
- modify Microsoft Works parser to use these classes to generate ( when possible)
  graphics with pattern, gradient background and to render a group of simple
  shapes and text in one graphic (when possible)

-------- version 1.12 (start)  -------------

07/31/2013:
- recognize more WriteNow 1.0 files

07/29/2013:
- check that the Microsoft Word use the new properties' classes,
- Microsoft Word parser: understand where the different properties
  are exactly stored,

07/16/2013:
- check that LightWay Text, Mariner Write, Microsoft Works, WriterPlus
  use the new properties' classes,